test modifying profile

--- a/motudy/build.gradle
+++ b/motudy/build.gradle
@@ -29,12 +29,15 @@ dependencies {
 
     // Persistence
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.projectlombok:lombok:1.18.24'
+    implementation 'org.projectlombok:lombok:1.18.24'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    testAnnotationProcessor('org.projectlombok:lombok')
 
     // Dev
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
