--- a/motudy/build.gradle
+++ b/motudy/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 
     // npm
     implementation 'com.moowork.gradle:gradle-node-plugin:1.3.1'
+
+    // Util - Mapper
+    implementation 'org.modelmapper:modelmapper:3.1.1'
 }
 
 tasks.named('test') {
