--- a/motudy/src/main/resources/application.properties
+++ b/motudy/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 server.port=8081
 
 spring.profiles.active=local
+
+# 개발할 때만 create-drop 또는 update를 사용하고, 운영 환경에서는 validate를 사용한다.
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# 개발 시 SQL 로깅을 하여 어떤 값으로 어떤 SQL이 실행되는지 확인한다.
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BaseBinder=TRACE
