--- a/motudy/src/main/resources/application.properties
+++ b/motudy/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BaseBinder=TRACE
 
+app.host=http://localhost:8081
