--- a/motudy/src/main/resources/application.properties
+++ b/motudy/src/main/resources/application.properties
@@ -10,4 +10,8 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BaseBinder=TRACE
 
+# 톰캣 기본 요청 사이즈는 2MB 이다. 그것보다 큰 요청을 받고 싶은 경우에 이 값을 조정해야 한다.
+server.tomcat.max-http-form-post-size=5MB
+
+# app server host
 app.host=http://localhost:8081
