--- a/motudy/src/main/resources/application.properties
+++ b/motudy/src/main/resources/application.properties
@@ -15,3 +15,6 @@ server.tomcat.max-http-form-post-size=5MB
 
 # app server host
 app.host=http://localhost:8081
+
+# HTML <FORM>속성으로 th:method에서 PUT 또는 DELETE를 사용해서 보내는 _method를 사용하여 @PutMapping과 @DeleteMapping으로 요청을 매핑
+spring.mvc.hiddenmethod.filter.enabled=true
