--- a/motudy/build.gradle
+++ b/motudy/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     // Persistence
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.projectlombok:lombok:1.18.24'
-    runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     // Lombok
@@ -46,6 +45,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'com.tngtech.archunit:archunit-junit5:0.23.1'
+
+    // Test Container
+    testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.13.0'
+    testImplementation 'org.testcontainers:junit-jupiter:1.13.0'
+    testImplementation 'org.testcontainers:mysql:1.13.0'
 
     // npm
     implementation 'com.moowork.gradle:gradle-node-plugin:1.3.1'
