--- a/motudy/build.gradle
+++ b/motudy/build.gradle
@@ -47,9 +47,10 @@ dependencies {
     testImplementation 'com.tngtech.archunit:archunit-junit5:0.23.1'
 
     // Test Container
-    testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.13.0'
-    testImplementation 'org.testcontainers:junit-jupiter:1.13.0'
-    testImplementation 'org.testcontainers:mysql:1.13.0'
+    runtimeOnly 'com.h2database:h2'
+    testImplementation "org.testcontainers:testcontainers:1.15.3"
+    testImplementation 'org.testcontainers:junit-jupiter:1.15.3'
+    testImplementation 'org.testcontainers:mysql:1.15.3'
 
     // npm
     implementation 'com.moowork.gradle:gradle-node-plugin:1.3.1'
