--- a/motudy/build.gradle
+++ b/motudy/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.7'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'com.moowork.node' version '1.3.1' // npm plugin
+    id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
 
 group = 'com.motudy'
@@ -32,6 +33,11 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.24'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // JPA-querydsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0'
+
+
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -60,11 +66,34 @@ dependencies {
 
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
 
+/** querydsl */
+def querydslDir = "$buildDir/generated/querydsl" // querydsl에서 사용할 경로 설정
 
+querydsl { // JPA 사용 여부와 사용할 경로 설정
+    jpa = true
+    querydslSourcesDir = querydslDir
+}
+
+sourceSets { // build 시 사용할 sourceSet 추가
+    main.java.srcDir querydslDir
+}
+
+compileQuerydsl { // querydsl 컴파일 시 사용할 옵션 설정
+    options.annotationProcessorPath = configurations.querydsl
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+    querydsl.extendsFrom compileClasspath
+}
+
+/** npm */
 def generated = 'generated'
 
 sourceSets {
